fix scrollbar from not showing the cursor on hover

--- a/src/app/(site)/page.css
+++ b/src/app/(site)/page.css
@@ -1,3 +1,3 @@
-*:hover {
+body:hover {
   cursor: none;
 }
